modified:   "docs/\347\263\273\347\273\237\350\256\276\350\256\241.md"

--- a/docs/系统设计.md
+++ b/docs/系统设计.md
@@ -2,6 +2,22 @@
 ## 用户管理模块
 
 ## 数据管理模块
+**景区的数据结构**
+- 建筑群
+- 道路群
+- 人气
+
+**建筑的数据结构**
+- 位置坐标
+- 名称
+- 功能
+
+**日记的数据结构**
+- 日记名
+- 日期
+- 内容
+- 评论
+- 评分
 
 ## 业务模块
 ### 推荐模块
@@ -12,14 +28,6 @@
 
 ## 前端接口模块
 存储图结构
-
-## 用户管理模块
-
-## 业务模块
-
-### 推荐
-
-### 游学日记
 
 # Browser/Client
 
