--- a/docs/系统设计.md
+++ b/docs/系统设计.md
@@ -1,33 +1,42 @@
 # Server
-## ç”¨æˆ·ç®¡ç†æ¨¡å—
+## ÓÃ»§¹ÜÀíÄ£¿é
 
-## æ•°æ®ç®¡ç†æ¨¡å—
-**æ™¯åŒºçš„æ•°æ®ç»“æž„**
-- å»ºç­‘ç¾¤
-- é“è·¯ç¾¤
-- äººæ°”
+## Êý¾Ý¹ÜÀíÄ£¿é
+**¾°ÇøµÄÊý¾Ý½á¹¹**
+- ½¨ÖþÈº
+- ²½ÐÐµÀÂ·Èº
+- ¹«½»£¨¶¯³µ£©µÀÂ·Èº
+- ÈËÆø
+- ÆÀÂÛ
+- ÆÀ·Ö
 
-**å»ºç­‘çš„æ•°æ®ç»“æž„**
-- ä½ç½®åæ ‡
-- åç§°
-- åŠŸèƒ½
+**½¨ÖþµÄÊý¾Ý½á¹¹**
+- Î»ÖÃ×ø±ê
+- Ãû³Æ
+- ¹¦ÄÜ
 
-**æ—¥è®°çš„æ•°æ®ç»“æž„**
-- æ—¥è®°å
-- æ—¥æœŸ
-- å†…å®¹
-- è¯„è®º
-- è¯„åˆ†
+**ÈÕ¼ÇµÄÊý¾Ý½á¹¹**
+- ÈÕ¼ÇÃû
+- ÈÕÆÚ
+- ÄÚÈÝ
+- ÆÀÂÛ
+- ÆÀ·Ö
 
-## ä¸šåŠ¡æ¨¡å—
-### æŽ¨èæ¨¡å—
-**è®¾è®¡æ€æƒ³ï¼šä½¿ç”¨**
-### å¯¼èˆªæ¨¡å—
-### æŸ¥è¯¢æ¨¡å—
-### æ—¥è®°æ¨¡å—
+## ÒµÎñÄ£¿é
+### ÍÆ¼öÄ£¿é
+Ê¹ÓÃÅÅÐòËã·¨¸ù¾Ý´ýÅÅÐò¶ÔÏóµÄÄ³¸öÊôÐÔ½øÐÐÅÅÐò£¬Ä¬ÈÏÍÆ¼öÊ¹ÓÃÐ­Í¬¹ýÂËÎªÓÃ»§¸öÐÔ»¯ÍÆ¼ö
+### µ¼º½Ä£¿é
+¸ù¾ÝÓÃ»§²»Í¬ÐèÇóÕÒ³ö×î¶ÌÂ·¾¶£¨Ê±¼ä£¬¼Û¸ñ£¬Â·¾­½¨Öþ£©
 
-## å‰ç«¯æŽ¥å£æ¨¡å—
-å­˜å‚¨å›¾ç»“æž„
+**Óµ¼·¶È¼ÆËã£º¸ù¾Ý²»Í¬µÀÂ·µÄÈËÊý¼ÆËãÓµ¼·¶È**
+### ²éÑ¯Ä£¿é
+Ê¹ÓÃ²éÕÒËã·¨£¬¸ù¾ÝÓÃ»§ÐèÇó°´¹Ø¼ü´Ê²éÕÒ
+### ÈÕ¼ÇÄ£¿é
+²ÉÓÃÍÆ¼öºÍ²éÕÒÄ£¿é¸øÓÃ»§ÍÆ¼öÈÕ¼Ç£¬²éÕÒÖ¸¶¨ÈÕ¼Ç
+
+ÈÕ¼ÇµÄÆÀÂÛÓëÆÀ·Ö£ºÃ¿Î»ÓÃ»§µÄÆÀÂÛ¶¼»á±£´æÔÚ¶ÔÓ¦µÄÈÕ¼ÇÀï£¬ÆÀ·Ö»áÏÔÊ¾Æ½¾ùÆÀ·Ö
+## Ç°¶Ë½Ó¿ÚÄ£¿é
+´æ´¢Í¼½á¹¹
 
 # Browser/Client
 
