--- a/docs/系统设计.md
+++ b/docs/系统设计.md
@@ -26,18 +26,77 @@
 ### 推荐模块
 使用排序算法根据待排序对象的某个属性进行排序，默认推荐使用协同过滤为用户个性化推荐
 ### 导航模块
-根据用户不同需求找出最短路径（时间，价格，路经建筑）
+根据用户不同需求找出最短路径（费用为时间，价格，建筑距离的函数）
 
 **拥挤度计算：根据不同道路的人数计算拥挤度**
 ### 查询模块
-使用查找算法，根据用户需求按关键词查找
+使用查找算法、协同过滤、基于内容的推荐算法等，根据用户需求按关键词查找
 ### 日记模块
 采用推荐和查找模块给用户推荐日记，查找指定日记
 
 日记的评论与评分：每位用户的评论都会保存在对应的日记里，评分会显示平均评分
+
 ## 前端接口模块
-存储图结构
+
+```json
+api/getPositon {
+  req:{
+    建筑名:string
+  }
+  return:{
+    经纬度:double[]
+  }
+}
+```
+
+```json
+api/getBuildings {
+  req:{
+    经纬度:double[]
+  }
+  return:{
+    建筑:object[]
+  }
+}
+```
+
+```json
+api/getComment{
+  req:{
+    建筑名:string
+  },
+  return:{
+    评论:object[]
+  }
+}
+```
+
+```json
+api/getUserInfo{
+  req:{
+    id:string
+  },
+  return:{
+    info:object
+  }
+}
+```
+```json
+api/getPath{
+  req:{
+    from:string,
+    to:string
+  },
+  return:{
+    edges:string[]
+  }
+}
+```
 
 # Browser/Client
 
-# Browser
+## 导航模块
+  通过server/api获取最佳路径,并显示
+### 地图显示模块
+  使用leaflet+OSM显示地图
+
