modified:   "docs/\347\263\273\347\273\237\350\256\276\350\256\241.md" 	modified:   "docs/\350\256\276\350\256\241\346\212\245\345\221\212.md" 	new file:   "docs/\350\256\276\350\256\241\346\212\245\345\221\212.pdf"

--- a/docs/设计报告.md
+++ b/docs/设计报告.md
@@ -41,5 +41,106 @@
 #### 动画生成（选做）
 使用 AIGC 算法根据拍摄的景点和学校照片进行动画生成
 
-![alt text](image.png)
-@import "系统设计.md"
+# Server
+## 用户管理模块
+
+## 数据管理模块
+**景区的数据结构**
+- 建筑群
+- 步行道路群
+- 公交（动车）道路群
+- 人气
+- 评论
+- 评分
+
+**建筑的数据结构**
+- 位置坐标
+- 名称
+- 功能
+
+**日记的数据结构**
+- 日记名
+- 日期
+- 内容
+- 评论
+- 评分
+
+## 业务模块
+### 推荐模块
+使用排序算法根据待排序对象的某个属性进行排序，默认推荐使用协同过滤为用户个性化推荐
+### 导航模块
+根据用户不同需求找出最短路径（费用为时间，价格，建筑距离的函数）
+
+**拥挤度计算：根据不同道路的人数计算拥挤度**
+### 查询模块
+使用查找算法、协同过滤、基于内容的推荐算法等，根据用户需求按关键词查找
+### 日记模块
+采用推荐和查找模块给用户推荐日记，查找指定日记
+
+日记的评论与评分：每位用户的评论都会保存在对应的日记里，评分会显示平均评分
+
+## 前端接口模块
+
+```json
+api/getPositon {
+  req:{
+    建筑名:string
+  }
+  return:{
+    经纬度:double[]
+  }
+}
+```
+
+```json
+api/getBuildings {
+  req:{
+    经纬度:double[]
+  }
+  return:{
+    建筑:object[]
+  }
+}
+```
+
+```json
+api/getComment{
+  req:{
+    建筑名:string
+  },
+  return:{
+    评论:object[]
+  }
+}
+```
+
+```json
+api/getUserInfo{
+  req:{
+    id:string
+  },
+  return:{
+    info:object
+  }
+}
+```
+```json
+api/getPath{
+  req:{
+    from:string,
+    to:string
+  },
+  return:{
+    edges:string[]
+  }
+}
+```
+
+# Browser/Client
+
+## 导航模块
+  通过server/api获取最佳路径,并显示
+### 地图显示模块
+  使用leaflet+OSM显示地图
+
+
