modified:   "docs/\350\256\276\350\256\241\346\212\245\345\221\212.md" 	modified:   "docs/\350\256\276\350\256\241\346\212\245\345\221\212.pdf"

--- a/docs/设计报告.md
+++ b/docs/设计报告.md
@@ -40,11 +40,13 @@
 
 #### 动画生成（选做）
 使用 AIGC 算法根据拍摄的景点和学校照片进行动画生成
+## 系统设计
+### Server
+#### 用户管理模块
+存储用户信息（账号密码，使用历史）
 
-# Server
-## 用户管理模块
-
-## 数据管理模块
+实现登录注册操作
+#### 数据管理模块
 **景区的数据结构**
 - 建筑群
 - 步行道路群
@@ -65,21 +67,21 @@
 - 评论
 - 评分
 
-## 业务模块
-### 推荐模块
+#### 业务模块
+##### 推荐模块
 使用排序算法根据待排序对象的某个属性进行排序，默认推荐使用协同过滤为用户个性化推荐
-### 导航模块
+##### 导航模块
 根据用户不同需求找出最短路径（费用为时间，价格，建筑距离的函数）
 
 **拥挤度计算：根据不同道路的人数计算拥挤度**
-### 查询模块
+##### 查询模块
 使用查找算法、协同过滤、基于内容的推荐算法等，根据用户需求按关键词查找
-### 日记模块
+##### 日记模块
 采用推荐和查找模块给用户推荐日记，查找指定日记
 
 日记的评论与评分：每位用户的评论都会保存在对应的日记里，评分会显示平均评分
 
-## 前端接口模块
+#### 前端接口模块
 
 ```json
 api/getPositon {
@@ -136,11 +138,11 @@ api/getPath{
 }
 ```
 
-# Browser/Client
+### Browser/Client
 
-## 导航模块
+#### 导航模块
   通过server/api获取最佳路径,并显示
-### 地图显示模块
+##### 地图显示模块
   使用leaflet+OSM显示地图
 
 
