modified:   "docs/\350\256\276\350\256\241\346\212\245\345\221\212.md"

--- a/docs/设计报告.md
+++ b/docs/设计报告.md
@@ -40,6 +40,13 @@
 
 #### 动画生成（选做）
 使用 AIGC 算法根据拍摄的景点和学校照片进行动画生成
+## 人员分工
+前端网页和图形化开发：宋健
+
+后端服务开发：李宇星，蔡逸文
+
+## 时间安排
+
 ## 系统设计
 ### Server
 #### 用户管理模块
