modified:   "docs/\350\256\276\350\256\241\346\212\245\345\221\212.md"

--- a/docs/设计报告.md
+++ b/docs/设计报告.md
@@ -46,6 +46,12 @@
 后端服务开发：李宇星，蔡逸文
 
 ## 时间安排
+- 第四周：各模块接口和数据定义
+- 第五周：推荐和搜索模块实现
+- 第六周：导航和日记模块实现
+- 第七周：编辑测试用例，测试系统
+- 第八周：用户管理模块和前端接口实现
+- 第九周及以后：前端网页开发和图形化实现
 
 ## 系统设计
 ### Server
