✨ feat(Datatype,Recommend): 实现排序算法

--- a/docs/设计报告.md
+++ b/docs/设计报告.md
@@ -79,10 +79,17 @@
 - 内容
 - 评论
 - 评分
-
 #### 业务模块
 ##### 推荐模块
 使用排序算法根据待排序对象的某个属性进行排序，默认推荐使用协同过滤为用户个性化推荐
+
+排序算法：使用快速排序算法，可以对任意对象的某个属性为关键字进行排序，定义如下：
+
+Obj quickSort(objArray 排序对象数组,Key 排序关键字,Mode 排序模式(升序降序))
+
+返回一个新的排序好的对象数组
+
+
 ##### 导航模块
 根据用户不同需求找出最短路径（费用为时间，价格，建筑距离的函数）
 
