📃 docs(设计报告): 添加推荐模块和路线规划模块的设计细节

--- a/docs/设计报告.md
+++ b/docs/设计报告.md
@@ -113,7 +113,7 @@
 
 排序算法：使用快速排序算法，可以对任意对象的某个属性为关键字进行排序，定义如下：
 
-Obj quickSort(objArray 排序对象数组,Key 排序关键字,Mode 排序模式(升序降序))
+`Obj quickSort(objArray 排序对象数组,Key 排序关键字,Mode 排序模式(升序降序))`
 
 返回一个新的排序好的对象数组
 
@@ -195,8 +195,71 @@ api/getPath{
 
 #### 前端导航模块
 
-  通过server/api获取最佳路径,并显示
+通过 `server/api` 获取最佳路径,并显示
 
 ##### 地图显示模块
 
-  使用leaflet+OSM显示地图
+使用 `leaflet+OSM` 显示地图
+
+## 模块细节
+
+### Recommend module
+
+### sort
+
+排序使用快速排序算法，可以根据传入的属性名称对类按某一属性排序，代码如下
+
+```python
+'''
+@note 排序算法
+@param array 对象列表
+@param key 排序关键字(字符串格式)
+@param mode 排序方式(0:升序,1:降序)
+@return 排序后的对象列表(原列表不变)
+'''
+def sort(array:List,key:str,mode:int = 0):
+    if len(array) <= 1:return array
+    base = getattr(array[0],key)
+    left = [x for x in array[1:] if getattr(x,key) < base]
+    right = [x for x in array[1:] if getattr(x,key) >= base]
+    if mode == 0:return sort(left,key,mode) + [array[0]] + sort(right,key,mode)
+    else:return list(reversed(sort(left,key,mode) + [array[0]] + sort(right,key,mode)))
+```
+
+### recommend
+
+## route select
+
+### 拥挤度的计算
+
+首先给出拥挤度的定义:**对于一条路径而言,拥挤度由组成这条路径的所有的边的拥挤度组成,不同的边有不同的拥挤度**
+
+所以,只要计算出一条边的拥挤度，就可以得出一条路径的拥挤度
+
+对于拥挤度,用一个 0-1 的数来表示,记为 `crowd`
+
+则通过一条路径的时间可以表示为
+
+$t=\frac{l}{v}\times\frac{1}{1+crowd}$,其中 t 为时间,l 为路径长度,v 为速度
+
+考虑如何计算 `crowd`:
+
+影响拥挤度的因素有:时间以及目的地和出发地的繁忙程度
+
+时间的影响很容易确定,显然在上午和傍晚这两个高峰拥挤度最大,二者之间的拥挤度正常,超出二者之外的时间短拥挤度最小
+
+将一天的时间分为以下几段,每段给予一个时间系数 `time_coefficient`:
+
+- 0:00 - 7:00 凌晨,系数为 0.5
+- 7:00 - 10:00 早高峰,系数为 2
+- 10:00 - 17:00 白天,系数为 1.5
+- 17:00 - 20:00 晚高峰,系数为 2
+- 20:00 - 24:00 夜晚,系数为 0.5
+
+对于起点和终点的繁忙程度,我们近似用两个节点的度来代替,度越大的节点越繁忙,度越小的节点越空闲
+
+通过所有节点的平均度 `average_degree` 可以计算出繁忙系数 `busy_coefficient`
+
+`busy_coefficient = (start_degree + end_degree)/2*average_degree`
+
+最终,拥挤度的计算公式为 `crowd = time_coefficient`
