--- a/docs/设计报告.md
+++ b/docs/设计报告.md
@@ -208,7 +208,7 @@ api/getPath{
 
 ### recommend
 
-## route select
+### route select
 
 ### 拥挤度的计算
 
@@ -293,3 +293,96 @@ def get_time(area:Area,road:Road,v:float):
   return road.length / v \
   / (1+get_crowd(road,start_degree,destination_degree,area.get_average_degree()))
 ```
+
+### 查询模块
+
+使用KMP算法进行查询，然后将输出的返回值进行特定的排序
+
+首先实现KMP算法进行查找，以下是KMP查询的主要算法
+
+主要的搜索函数，接收两个字符串参数：模式pat和文本txt。它返回模式在文本中的所有出现位置的列表。
+
+```python
+'''
+@param pat 模式
+@param txt 文本
+@return 位置列表
+'''
+def KMPSearch(pat, txt):
+    M = len(pat)
+    N = len(txt)
+    # 创建lps[]将会为模式持有最长的前缀后缀值
+    lps = [0]*M
+    j = 0 # pat[]的索引
+    # 预处理模式（计算lps[]数组）
+    computeLPSArray(pat, M, lps)
+    i = 0 # txt[]的索引
+    results = []
+    while i < N:
+        if pat[j] == txt[i]:
+            i += 1
+            j += 1
+        if j == M:
+            results.append(i-j)
+            j = lps[j-1]
+        # j个匹配后的不匹配
+        elif i < N and pat[j] != txt[i]:
+            # 不匹配lps[0..lps[j-1]]字符,
+            # 它们将 anyway 匹配
+            if j != 0:
+                j = lps[j-1]
+            else:
+                i += 1
+    return results
+```
+
+辅助函数，用于预处理模式字符串并填充LPS数组。LPS数组包含了在不匹配时应该跳过的字符数，从而避免不必要的比较。
+```python
+'''
+@param pat 模式
+@param M 模式长度
+@param lps 最长前缀后缀
+'''
+def computeLPSArray(pat, M, lps):
+    len = 0 # 前一个最长前缀后缀的长度 
+    lps[0] = 0 # lps[0]始终为0
+    i = 1
+    while i < M:
+        if pat[i] == pat[len]:
+            len += 1
+            lps[i] = len
+            i += 1
+        else:
+            if len != 0:
+                len = lps[len-1]
+            else:
+                lps[i] = 0
+                i += 1
+```
+
+在类实例的文本属性中搜索关键字函数接受一个关键字和一系列数据类实例。它在每个实例的属性中搜索该关键字，如果属性是字符串、列表或集合，并且元素类型为字符串，则使用KMP算法进行搜索。搜索结果以实例为键，属性名和关键字出现次数为值的字典形式返回。
+
+```python
+'''
+@param keyword 关键字
+@param instances 数据类实例
+@return 结果字典
+'''
+def search_keyword_in_classes(keyword, instances):
+    results = {}
+    for instance in instances:
+        for attribute, value in vars(instance).items():
+            if isinstance(value, str):
+                found_positions = KMPSearch(keyword, value)
+                if found_positions:
+                    results.setdefault(instance, []).append((attribute, len(found_positions)))
+            elif isinstance(value, list) or isinstance(value, set):
+                for item in value:
+                    if isinstance(item, str):
+                        found_positions = KMPSearch(keyword, item)
+                        if found_positions:
+                            results.setdefault(instance, []).append((attribute, len(found_positions)))
+    return results
+```
+
+其次将查询结果按照一定的规则进行排序（TODO）
