modified:   "docs/\350\256\276\350\256\241\346\212\245\345\221\212.md"

--- a/docs/设计报告.md
+++ b/docs/设计报告.md
@@ -204,7 +204,7 @@ api/getPath{
 
 ### 数据定义模块
 
-定义的代码文件为[DataType.py](server\src\DataType.py)
+定义的代码文件为[DataType.py](..\server\src\DataType.py)
 
 ### recommend
 
@@ -294,7 +294,7 @@ def get_time(area:Area,road:Road,v:float):
   / (1+get_crowd(road,start_degree,destination_degree,area.get_average_degree()))
 ```
 
-### 查询模块
+### Search
 
 使用 KMP 算法进行查询，然后将输出的返回值进行特定的排序
 
