✨ feat(browser): add login

--- a/docs/设计报告.md
+++ b/docs/设计报告.md
@@ -192,13 +192,21 @@ api/getPath{
 
 ### Browser/Client
 
+#### 登录模块
+
+使用localStorage存储登录信息，当没有登录信息或者超时要求重新登录，向后端发起登录验证，验证通过即存储信息，退出页面记录最后登录的时间戳
+
 #### 前端导航模块
 
 通过 `server/api` 获取最佳路径,并显示
 
 ##### 地图显示模块
 
-使用 `leaflet+OSM` 显示地图
+使用 `百度地图api` 实现地图绘制功能
+
+#### 数据录入
+
+提供管理员页面，通过手动点击的方式录入景区/建筑物的坐标（范围），以及不同建筑物之间的路线的轨迹
 
 ## 模块细节
 
