modified:   "docs/\350\256\276\350\256\241\346\212\245\345\221\212.md"

--- a/docs/设计报告.md
+++ b/docs/设计报告.md
@@ -190,11 +190,11 @@ api/getPath{
 }
 ```
 
-### Browser/Client
+### Browser
 
 #### 登录模块
 
-使用localStorage存储登录信息，当没有登录信息或者超时要求重新登录，向后端发起登录验证，验证通过即存储信息，退出页面记录最后登录的时间戳
+使用 localStorage 存储登录信息，当没有登录信息或者超时要求重新登录，向后端发起登录验证，验证通过即存储信息，退出页面记录最后登录的时间戳
 
 #### 前端导航模块
 
