--- a/docs/设计报告.md
+++ b/docs/设计报告.md
@@ -46,10 +46,6 @@
 - 景区内可以选择电瓶车或步行，电瓶车有固定路线和固定的发车时间
 - 在考虑不同拥挤度的情况下实现用时最短（可以多种交通工具混合）
 
-#### 更多推荐算法（选做）
-
-采用基于内容推荐、协同过滤推荐等算法对景点、学校、游学日记进行推荐
-
 #### 动画生成（选做）
 
 使用 AIGC 算法根据拍摄的景点和学校照片进行动画
@@ -63,9 +59,11 @@
 
 ## 开发环境
 
-后端开发环境：python
+后端开发环境：python3.12
 
 前端开发环境：vue3 typescript
+
+远程协作环境：github+git
 
 ## 时间安排
 
@@ -73,8 +71,9 @@
 - 第五周：推荐和搜索模块实现
 - 第六周：导航和日记模块实现
 - 第七周：编辑测试用例，测试系统
-- 第八周：用户管理模块和前端接口实现
-- 第九周及以后：前端网页开发和图形化实现
+- 第八周：用户管理模块和前端实现
+- 第九周：前端网页开发和图形化实现
+- 第十周及以后：迭代开发
 
 ## 系统设计
 
@@ -195,6 +194,8 @@ api/getPath{
 }
 ```
 
+...
+
 ### Browser
 
 #### 登录模块
@@ -282,7 +283,7 @@ def get_crowd(road:Road,start_degree,destination_degree,average_degree):
 
 ### 用时最少与距离最短的路径选择
 
-对于距离最短路径,只需将建筑看成点,道路看成边,道路长度看成权值,使用最短路径算法即可求得
+对于距离最短路径,只需将建筑看成点,道路看成边,道路长度看成权值,使用 Dj 堆优化最短路径算法即可求得
 
 对于用时最少路径,只需将每条边的权值更新为时间,即可用同样的算法求得用时最短路径
 
