new file:   "docs/\345\221\250\346\212\245/\347\254\254\344\270\203\345\221\250\345\221\250\346\212\245.md" 	new file:   "docs/\345\221\250\346\212\245/\347\254\254\344\270\203\345\221\250\345\221\250\346\212\245.pdf" 	new file:   "docs/\345\221\250\346\212\245/\347\254\254\345\205\253\345\221\250\345\221\250\346\212\245.md" 	new file:   "docs/\345\221\250\346\212\245/\347\254\254\345\205\253\345\221\250\345\221\250\346\212\245.pdf" 	new file:   server/src/Comment.py 	modified:   server/src/DataType.py 	modified:   server/src/Recommend.py 	modified:   server/src/Route_select.py

--- a/docs/周报/第八周周报.md
+++ b/docs/周报/第八周周报.md
@@ -1,3 +1,14 @@
+# 第八周周报
+
+## 第十九小组 蔡逸文 宋健 李宇星
+
+### 本周工作
+
+#### 改进了排序功能
+
+改进后，采用了 lambda 函数来决定元素的排序方式，代码如下：
+
+```python
 from DataType import *
 '''
 @note 排序算法
@@ -23,12 +34,22 @@ def sort(array,key:str,compare):
         raise AttributeError('AttributeError:element {} is not exist'.format(key)) from e
     return quicksort(array,key,compare)
 
+```
 
-def test_sort():
-    test = [Building((0,0),set(),"d",0),Building((0,0),set(),"v",1),Building((0,0),set(),"b",2),Building((0,0),set(),"a",3)]
-    expected_result = [Building((0,0),set(),"a",3),Building((0,0),set(),"b",2),Building((0,0),set(),"d",0),Building((0,0),set(),"v",1)]
-    result = sort(test,"building_name",lambda x,y:x<y)
-    for x in range(0,4):
-        print(result[x].building_name)
-    return
+#### 增加了评论功能，可以对景区和日记作出评论
 
+```python
+from DataType import *
+
+def make_comment(comment:Comment,Object):
+    if not (isinstance(Object, Journal) or isinstance(Object, Area)):
+        return
+    if(isinstance(Object, Journal)):
+        Object.journal_comments.append(comment)
+    else:
+        Object.comment_group.append(comment)
+```
+
+### 下周工作
+
+继续完善各个模块的功能
