add area data and update code

--- a/docs/周报/第十、十一周周报.md
+++ b/docs/周报/第十、十一周周报.md
@@ -1,3 +1,13 @@
+# 第九周周报
+
+## 第十九小组 蔡逸文 宋健 李宇星
+
+### 本周工作
+
+完成真实景点数据的录入代码
+![alt text](image-2.png)
+主要代码如下
+```python
 # encoding:utf-8
 from datetime import datetime
 import asyncio
@@ -89,3 +99,9 @@ if __name__ == "__main__":
     #     await create_city(city.split(',')[0])
   asyncio.run(main())
   print("done")
+
+```
+完成导航界面的初步显示（但还存在轨迹坐标不对的问题）
+### 下周安排
+
+完善界面显示，修改上述bugsV
